[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"


[dependencies.sdl2]
version = "0.35.0"
default-features = false
features = ["ttf"]

[dependencies.sdl2-sys]
version = "0.35.2"